# scheduler_c

./: CMakeLists.txt  README.md  build.sh  main.c  modular.c
scheduler/: CMakeLists.txt
scheduler/Task1/: CMakeLists.txt
scheduler/Task1/adapt/: task1ca.c  task1ca.h
scheduler/Task1/core/: task1c1.c  task1c1.h
scheduler/Task2/: CMakeLists.txt
scheduler/Task2/adapt/: task2ca.c  task2ca.h
scheduler/Task2/core/: task2c1.c  task2c1.h
scheduler/adapt/: Schedulerca.h
scheduler/core/: scheduler.c  scheduler.h  schedulertp.h
